--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
-    "expo-image": "~1.12.12"
+    "expo-image": "~1.12.12",
+    "expo-build-properties": "~0.12.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
